--- a/www/index.html
+++ b/www/index.html
@@ -751,7 +751,7 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
-            if (typeof admob !==="undefined") {
+            if (typeof admob !=="undefined") {
                 admob.createBannerView();
                 admob.requestInterstitialAd();
                 admob.showInterstitialAd();
