--- a/www/index.html
+++ b/www/index.html
@@ -746,7 +746,7 @@
        }
 	 </script>
    
-   <div class = "app"></div>
+   <div class = "app"><div id="spinner"></div><div id="sizeinfo"></div></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
