--- a/www/index.html
+++ b/www/index.html
@@ -746,10 +746,13 @@
        }
 	 </script>
    
-   <div class = "app"><div id="progressDialog" class="progressDialog hidden">
-      <div id="spinner"></div>
-      <span id="message">Loading ads...</span>
-    </div><div id="sizeinfo"></div></div>
+   <div class = "app">
+        <div id="progressDialog" class="progressDialog hidden">
+            <div id="spinner"></div>
+            <span id="message">Loading ads...</span>
+        </div>
+        <div id="sizeinfo"></div>
+   </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
