--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 	     var action,poos,ttime,ddate,dpoos,pdate,ptime;
         </script>
    </HEAD>
-   <BODY onresize="app.onResize()">
+   <BODY >
       <div id="spinner">
 	<div class="container">
 		<div class="loading1">
