--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 	 <link rel="stylesheet" href="js/slick/slick.css"/>
 	 <link rel="stylesheet" href="js/slick/slick-theme.css"/>
 	 <link rel="stylesheet" type="text/css" media="all" href="css/jquery-ui.css" />
-         <link rel="stylesheet" href="js/jquery.alerts/jquery.alerts.css"/>
+         <!--link rel="stylesheet" href="js/jquery.alerts/jquery.alerts.css"/-->
 	 <link rel="stylesheet" type="text/css" media="all" href="css/style.css?foo=12" />
 	 <style>html { -webkit-text-size-adjust: 100%; }</style>
 	 <script src="js/jquery-latest.min.js"></script>
@@ -22,7 +22,7 @@
 	 <script src="js/jquery.touchwipe.1.1.1.js"></script>
 	 <script src="js/owl-carousel/owl.carousel.js"></script>
 	 <script type="text/javascript" src="js/slick/slick.min.js"></script>
-         <script src="js/jquery.alerts/jquery.alerts.js"></script>
+         <!--script src="js/jquery.alerts/jquery.alerts.js"></script-->
 	 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 	 <!--script src="js/cordova.js"></script>
 	 <script src="js/LocalNotification.js"></script-->
@@ -33,7 +33,7 @@
 	     var action,poos,ttime,ddate,dpoos,pdate,ptime;
         </script>
    </HEAD>
-   <BODY >
+   <BODY>
       <div id="spinner">
 	<div class="container">
 		<div class="loading1">
@@ -130,7 +130,9 @@
       	 
 	
 	 <script>
-	   
+	   function alrt(){
+            return true;
+           }
 	    function goo(vari){
 	       switch(vari){
 		  case 'tvd':
@@ -150,8 +152,9 @@
 			      $('body #menu-head a#back').attr('data-actt','prog').show();
 			   },
 			   error: function(jqxhr){
-                                jAlert('\n\r\tLa connexion au serveur est impossible, vérifiez votre connexion internet ou revenez ultérieurement !\n\r','Désolé');
-			      //alert("\t\t\tDésolé\n\r\n\r\tLa connexion au serveur est impossible, vérifiez votre connexion internet ou revenez ultérieurement !");
+                            navigator.notification.alert('n\r\tLa connexion au serveur est impossible, vérifiez votre connexion internet ou revenez ultérieurement !\n\r', alrt , "Désolé", "D'accord");
+
+			     // alert("\t\t\tDésolé\n\r\n\r\tLa connexion au serveur est impossible, vérifiez votre connexion internet ou revenez ultérieurement !");
 			   }
 		      });
                },50);
