--- a/www/index.html
+++ b/www/index.html
@@ -92,7 +92,7 @@
 	//       }
 	 </script>
 	  
-	    <div data-role="header" data-theme="f" id="menu-head" class="menu">
+	    <div data-role="header" data-theme="f" id="menu-head" class="menu" data-position="fixed">
 		    <h1></h1>
 		    <a href="#nav-panel" data-icon="bars" data-iconpos="notext" class="ui-nodisc-icon" data-iconshadow="false">Menu</a>
 		    <a id="back" class="ui-nodisc-icon" data-actt="" data-icon="carat-l" data-iconpos="notext" data-iconshadow="false">Back</a>
@@ -106,7 +106,7 @@
 		     
 		  </div>
 	    </div>
-	    <div data-role="panel" data-position="left" data-position-fixed="false" data-display="reveal" id="nav-panel" data-theme="a">
+	    <div data-role="panel" data-position="left" data-position-fixed="true" data-display="reveal" id="nav-panel" data-theme="a">
 
 		  <ul data-role="listview" data-theme="a" data-divider-theme="a" style="margin-top:-16px;" class="nav-search">
 			  <li data-filtertext="wai-aria voiceover accessibility screen reader" data-icon="false">
