--- a/www/index.html
+++ b/www/index.html
@@ -803,7 +803,7 @@
         
         function initApp() {
             if (typeof admob !== 'undefined') {
-                console.log('jaja');
+                //console.log('jaja');
                 setTimeout(function(){
                     admob.createBannerView({
                         publisherId : admobid.banner,
