--- a/www/index.html
+++ b/www/index.html
@@ -107,7 +107,7 @@
 		     
 		  </div>
 	    </div>
-	    <div data-role="panel" data-position="left" data-position-fixed="true" data-display="reveal" id="nav-panel" data-theme="a">
+	    <div data-role="panel" data-position="right" data-position-fixed="true" data-display="reveal" id="nav-panel" data-theme="a">
 
 		  <ul data-role="listview" data-theme="a" data-divider-theme="a" style="margin-top:-16px;" class="nav-search">
 			  <li data-filtertext="wai-aria voiceover accessibility screen reader" data-icon="false">
@@ -132,10 +132,10 @@
 	
 	 <script>
             
-            $("body #nav-panel").on("panelbeforeopen panelbeforeclose",function(){
-	       $("body #mennu").toggleClass('ui-btn-right ui-btn-left');
-	       $("body #back").toggleClass('ui-btn-right ui-btn-left');
-	    });
+//            $("body #nav-panel").on("panelbeforeopen panelbeforeclose",function(){
+//	       $("body #mennu").toggleClass('ui-btn-right ui-btn-left');
+//	       $("body #back").toggleClass('ui-btn-right ui-btn-left');
+//	    });
 	   function alrt(){
             return true;
            }
